src/objects/EC_Order__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Targeted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Targeted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approved_EC_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendee_Type__c</fullName>
        <label>Attendee Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Members</fullName>
                </value>
                <value>
                    <fullName>Non-Members</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Exhibitor Orders</relationshipLabel>
        <relationshipName>Exhibitor_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <label>Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Degrees__c</fullName>
        <label>Degrees</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Degrees_Held_Global_Value_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exhibitor_Setting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exhibitor Setting</label>
        <referenceTo>EC_Exhibitor_Setting__c</referenceTo>
        <relationshipLabel>Exhibitor Orders</relationshipLabel>
        <relationshipName>Exhibitor_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Institution_Type__c</fullName>
        <label>Institution Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Institution_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Name__c</fullName>
        <label>Order Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organ_Sites__c</fullName>
        <label>Organ Sites</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Organ_Sites_Global_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Exhibitor Orders</relationshipLabel>
        <relationshipName>Exhibitor_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Research_Area_of_Expertise__c</fullName>
        <label>Research Area of Expertise</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Research_Areas_Global_Value_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>OrderApi__Sales_Order__c</referenceTo>
        <relationshipLabel>Exhibitor Orders</relationshipLabel>
        <relationshipName>Exhibitor_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                    <default>true</default>
                    <label>Incomplete</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Over Budget</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Exhibitor Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Requested_By__c</columns>
        <columns>Status__c</columns>
        <columns>Company__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_Orders</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Approval_Date__c</columns>
        <columns>Approved_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Orders</label>
    </listViews>
    <listViews>
        <fullName>Submitted_Orders</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Requested_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Submitted Orders</label>
    </listViews>
    <nameField>
        <displayFormat>EO-{0000}</displayFormat>
        <label>EO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exhibitor Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Must_have_verified_domain_to_approve</fullName>
        <active>true</active>
        <description>Order must have a verified domain in its related Setting before it can be approved.</description>
        <errorConditionFormula>AND(  ISPICKVAL(Status__c,&apos;Approved&apos;),
ISBLANK( Exhibitor_Setting__r.Verified_Domain__c))</errorConditionFormula>
        <errorMessage>Order must have a verified domain in its related Exhibitor Setting before it can be approved.</errorMessage>
    </validationRules>
</CustomObject>